--- a/youtube-header.css
+++ b/youtube-header.css
@@ -1,6 +1,6 @@
 .header {
     height:55px;
-    background-color: rgba(255, 255, 255, 0.623);
+    background-color: rgb(255, 255, 255);
     z-index:100;
 
     display:flex;
@@ -92,6 +92,7 @@
 }
 .create-icon{
     width:24px;
+    margin-left:1px;
     
 }
 .notifications-icon{
@@ -103,5 +104,12 @@
     width:32px;
     border-radius:20px;
     margin-left:30px;
-    margin-right:30px;
+    margin-right:29px;
+}
+
+.subheader {
+    background-color: rgb(170, 106, 23);
+    
+    position:fixed;
+
 }
