--- a/youtube-sidebar.css
+++ b/youtube-sidebar.css
@@ -1,6 +1,6 @@
 .sidebar{
     background-color: rgb(255, 255, 255);
-    width:190px;
+    width:240px;
     border-style: solid;
     border-width:1px;
     border-color: black;
