--- a/youtube-video-previews.css
+++ b/youtube-video-previews.css
@@ -1,40 +1,43 @@
 .video-grid{
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    background-color: rgba(0, 0, 0, 0.041);
-    column-gap: 15px;
-    row-gap:50px;
+    grid-template-columns: repeat(4, 1fr);
+    max-width:340px;
+    column-gap: 16px;
     
 }
 
 .video-card{
     margin: 0;
+    margin-bottom:38px;
 }
 
 .thumbnail-container{
-    width:300px;
-    margin-bottom:5px;
+    width:359px;
+    margin-bottom:10px;
     position:relative;
 }
 .thumbnail{
     width:100%;
-    border-radius:13px;
+    border-radius:10px;
 }
 .video-time{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.76);
     color:white;
     border-radius:5px;
-    padding-right:3px;
-    padding-left:3px;
-    padding-top:1px;
-    padding-bottom:1px;
+    padding-right:4px;
+    padding-left:4px;
+    padding-top:3px;
+    padding-bottom:3px;
 
-    font-size:11px;
+    font-size:12px;
     font-family:Roboto, Arial, sans-serif;
+    font-weight:500;
+    line-height: 12px;
+
 
     position:absolute;
-    bottom:10px;
-    right:8px;
+    bottom:7px;
+    right:3px;
 
 }
 
@@ -44,35 +47,40 @@
 }
 .channel-profile-pic{
     border-radius:50px;
-    width:40px;
+    width:36px;
     vertical-align:top;
 }
 
 .video-info-grid {
     display:grid;
-    grid-template-columns: 50px 1fr;
+    grid-template-columns: 48px 1fr;
     
 }
 .video-info{
-    width:250px;
+    width:280px;
     vertical-align:top;
     
     
 }
 .video-title {
-    font-size:15px;
+    font-size:16px;
     font-weight:500;
+    line-height:22px;
     margin-bottom:5px;
+
 }
 .channel-name {
-    font-size:12px;
+    font-size:14px;
     color:rgb(95, 95, 95);
     font-weight:400;
-    margin-bottom:3px;
+    line-height:20px;
+
+
 }
 .video-stats {
-    font-size:12px;
+    font-size:14px;
     color:rgb(95, 95, 95);
+    line-height:20px;
     font-weight:400;
 }
 
